[package]
name = "clearing_house"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = "0.10.17"
ic-cdk = "0.18.5"
ciborium = "0.2.1"
futures = "0.3"
ic-stable-structures = "0.7.0"
icrc-ledger-types = "0.1.5"
ic-cdk-timers = "0.12.2"
bincode = "1.3"
primitive-types = "0.13.1"
rust_decimal = { version = "1.37", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }

